--- a/actividad7/Collect_Flights.ipynb
+++ b/actividad7/Collect_Flights.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "id": "ada9bf39",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "id": "41c2bd87",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "id": "5ecdf979",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "id": "f2d817e7",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
     "flight_arrivals = response.json()\n",
     "\n",
     "for flight in flight_arrivals:\n",
-    "    flight_arrivals['arrivals'][0]['arrival']['scheduledTime']\n",
+    "    flight_arrivals['arrivals'][0]['arrival']['scheduledTime']['utc']\n",
     "    flight_arrivals['arrivals'][0]['number']\n",
     "    flight_arrivals['arrivals'][0]['arrival']['terminal']\n",
     "    flight_arrivals['arrivals'][0]['departure']['airport']['name']\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 79,
    "id": "a3454276",
    "metadata": {},
    "outputs": [
@@ -119,75 +119,62 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>scheduled_arrival_time</th>\n",
        "      <th>flight_number</th>\n",
-       "      <th>from</th>\n",
+       "      <th>from_airport</th>\n",
        "      <th>airline</th>\n",
-       "      <th>Scheduled_arrival_time.utc</th>\n",
-       "      <th>Scheduled_arrival_time.local</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2025-08-31 21:55Z</td>\n",
        "      <td>VA 204</td>\n",
        "      <td>Adelaide</td>\n",
        "      <td>Virgin Australia</td>\n",
-       "      <td>2025-08-31 21:55Z</td>\n",
-       "      <td>2025-09-01 07:55+10:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-08-31 22:25Z</td>\n",
        "      <td>VA 726</td>\n",
        "      <td>Gold</td>\n",
        "      <td>Virgin Australia</td>\n",
-       "      <td>2025-08-31 22:25Z</td>\n",
-       "      <td>2025-09-01 08:25+10:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>UA 6801</td>\n",
-       "      <td>Wellington</td>\n",
-       "      <td>United</td>\n",
+       "      <th>2</th>\n",
        "      <td>2025-08-31 22:10Z</td>\n",
-       "      <td>2025-09-01 08:10+10:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>EY 4436</td>\n",
+       "      <td>TG 4844</td>\n",
        "      <td>Wellington</td>\n",
-       "      <td>Etihad</td>\n",
-       "      <td>2025-08-31 22:10Z</td>\n",
-       "      <td>2025-09-01 08:10+10:00</td>\n",
+       "      <td>Thai  International</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-08-31 22:10Z</td>\n",
+       "      <td>NZ 253</td>\n",
+       "      <td>Wellington</td>\n",
+       "      <td>Air New Zealand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-08-31 22:10Z</td>\n",
        "      <td>VA 7153</td>\n",
        "      <td>Wellington</td>\n",
        "      <td>Virgin Australia</td>\n",
-       "      <td>2025-08-31 22:10Z</td>\n",
-       "      <td>2025-09-01 08:10+10:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  flight_number        from           airline Scheduled_arrival_time.utc  \\\n",
-       "0        VA 204    Adelaide  Virgin Australia          2025-08-31 21:55Z   \n",
-       "0        VA 726        Gold  Virgin Australia          2025-08-31 22:25Z   \n",
-       "0       UA 6801  Wellington            United          2025-08-31 22:10Z   \n",
-       "0       EY 4436  Wellington            Etihad          2025-08-31 22:10Z   \n",
-       "0       VA 7153  Wellington  Virgin Australia          2025-08-31 22:10Z   \n",
-       "\n",
-       "  Scheduled_arrival_time.local  \n",
-       "0       2025-09-01 07:55+10:00  \n",
-       "0       2025-09-01 08:25+10:00  \n",
-       "0       2025-09-01 08:10+10:00  \n",
-       "0       2025-09-01 08:10+10:00  \n",
-       "0       2025-09-01 08:10+10:00  "
+       "  scheduled_arrival_time flight_number from_airport              airline\n",
+       "0      2025-08-31 21:55Z        VA 204     Adelaide     Virgin Australia\n",
+       "1      2025-08-31 22:25Z        VA 726         Gold     Virgin Australia\n",
+       "2      2025-08-31 22:10Z       TG 4844   Wellington  Thai  International\n",
+       "3      2025-08-31 22:10Z        NZ 253   Wellington      Air New Zealand\n",
+       "4      2025-08-31 22:10Z       VA 7153   Wellington     Virgin Australia"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,20 +188,73 @@
     "\n",
     "#hacemos la extracción de los datos y los ponemos en tabla  de los primeros 5 datos con el flight_arrivals.head\n",
     "\n",
-    "def flight_extraction(flights):\n",
+    "#def flight_extraction(flight):\n",
+    "#    flights_df = pd.json_normalize({\n",
+    " #       'Scheduled_arrival_time': flight['arrival']['scheduledTime']['utc'],\n",
+    "  #      'flight_number': flight['number'],\n",
+    "   #     'from' : flight['departure']['airport']['name'],\n",
+    "    #    'airline' : flight['airline']['name'],\n",
+    "    #})\n",
+    "    #return(flights_df)\n",
+    "\n",
+    "\n",
+    "def flight_extraction(flight):\n",
     "    flights_df = pd.json_normalize({\n",
-    "        'Scheduled_arrival_time': flights['arrival']['scheduledTime'],\n",
-    "        'flight_number': flights['number'],\n",
-    "        'from' : flights['departure']['airport']['name'],\n",
-    "        'airline' : flights['airline']['name'],\n",
+    "        'scheduled_arrival_time': flight['arrival']['scheduledTime']['utc'],  \n",
+    "        'flight_number': flight['number'],\n",
+    "        'from_airport': flight['departure']['airport']['name'],\n",
+    "        'airline': flight['airline']['name'],\n",
+    "        #'icao_code': f\"NULL\"\n",
     "    })\n",
     "    return(flights_df)\n",
     "\n",
+    "\n",
     "flight_arrivals = pd.concat(\n",
-    "    [flight_extraction(flight) for flight in flight_arrivals['arrivals']]\n",
+    "    [flight_extraction(flight) for flight in flight_arrivals['arrivals']],\n",
+    "    ignore_index=True\n",
     ")\n",
     "\n",
     "flight_arrivals.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "3ac37964",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlalchemy\n",
+    "import pymysql\n",
+    "# connection details for the local mysql database\n",
+    "schema = \"gans\"\n",
+    "host = \"127.0.0.1\"\n",
+    "user = \"root\"\n",
+    "password = \"al0294rR651%J\"\n",
+    "port = 3306\n",
+    "con = f'mysql+pymysql://{user}:{password}@{host}:{port}/{schema}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "ba68872d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "319"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# send the weather data to the database\n",
+    "flight_arrivals.to_sql('flight_arrival', if_exists = 'append', con = con, index=False)"
    ]
   }
  ],
